--- a/cuImage/zh-Hans.lproj/Localizable.strings
+++ b/cuImage/zh-Hans.lproj/Localizable.strings
@@ -5,7 +5,7 @@
 "Acknowledgment" = "致谢";
 
 /* No comment provided by engineer. */
-"Before uploading, you should take a screenshort, copy images or drag images to cuImage icon on status bar." = "在上传之前，请先截图、拷贝图片到粘贴板或者直接拖拽图片到状态栏的cuImage图标上。";
+"Before uploading, you should take a screenshort, copy images or drag images to cuImage icon on status bar." = "在上传之前，请先截图、复制图片到粘贴板或者直接拖拽图片到状态栏的cuImage图标上。";
 
 /* No comment provided by engineer. */
 "Cancel" = "取消";
