--- a/cuImage/zh-Hans.lproj/GeneralPreferencesPaneController.strings
+++ b/cuImage/zh-Hans.lproj/GeneralPreferencesPaneController.strings
@@ -40,3 +40,5 @@
 
 /* Class = "NSTextFieldCell"; title = "Application:"; ObjectID = "oyf-rG-l1O"; */
 "oyf-rG-l1O.title" = "应用程序：";
+
+"SLW-6U-XrC.title" = "注：JPEG压缩不支持压缩GIF。";
