Localize 'Services' menu string

--- a/cuImage/zh-Hans.lproj/GeneralPreferencesPaneController.strings
+++ b/cuImage/zh-Hans.lproj/GeneralPreferencesPaneController.strings
@@ -41,4 +41,4 @@
 /* Class = "NSTextFieldCell"; title = "Application:"; ObjectID = "oyf-rG-l1O"; */
 "oyf-rG-l1O.title" = "应用程序：";
 
-"SLW-6U-XrC.title" = "注：JPEG压缩不支持压缩GIF。";
+"t1F-Ck-qHC.title" = "不支持压缩GIF。";
